@@ -1,3 +1,9 @@
+2008-08-13  Rainer Arndt <Arndt-ADT@kieback-peter.de>
+
+	* src/common/termiostty.c (set_attr) : Fixed bug for XON/XOFF 
+	flow control that was wrong in termiostty. 
+	set_attr() now looks into c_iflag for IXON/IXOFF flags.
+
 2008-01-30  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/common/termiostty.c (termios_lookup): Add missing set of
